# systemet_apk_pub

./: .gitignore  Cargo.toml  log4rs.yml
src/: main.rs
src/app/: mod.rs  service.rs  web.rs
src/database/: mod.rs
src/database/api/: mod.rs
src/database/storage/: init.rs  mod.rs  query_utils.rs  storage.rs
src/domain/: mod.rs  tests.rs
src/domain/arithmetic/: mod.rs
src/domain/models/: mod.rs  product.rs  serialization_helpers.rs  site.rs
src/domain/result/: mod.rs
