[package]
name = "systemet-apk"
version = "0.1.0"
authors = ["MGrass1 <marcus.grass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.6"
tokio = { version = "0.2.22", features = ["rt-threaded", "time", "macros"]}
futures = "0.3.1"

serde_json = "1.0.56"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.24.0", features = ["bundled"] }

log = "0.4.11"
log4rs = { version ="1.0.0-alpha-1", features = ["console_appender", "file_appender"] }
error-chain = "0.12.4"

lazy_static = "1.4.0"

actix-rt = "1.1.1"
actix-web = "3.0.2"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.3"
actix-cors = "0.3.0"

bytes = "0.5"
unidecode = "0.3.0"
regex = "1.3.9"